--- a/cra/task-v2-cra.yaml
+++ b/cra/task-v2-cra.yaml
@@ -151,7 +151,7 @@ spec:
         - name: REGION
           value: $(params.ibmcloud-region)
         - name: CUSTOM_SCRIPT
-          value: $(params.custom-script)
+          value: "./custom-script.sh"
 
         - name: API_KEY
           valueFrom:
